add photo of ellie-may

--- a/favourite-things.html
+++ b/favourite-things.html
@@ -13,6 +13,8 @@
       <li>My son</li>
       <li>My two daughters</li>
       <li>Ellie-May</li>
+      <img src="images/ellie-may.jpg" alt ="Ellie-May">
+
     </ul>
 
     <h3>Flavours of ice cream</h3>
