--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -5,12 +5,12 @@
   </head>
   <body>
     <h1>My first webpage</h1>
-    <h2>Written with guidance of Epicodus</h2>
+    <h2>Written with <em>guidance</em> of Epicodus</h2>
 
     <p>This is my first webpage</p>
     <p>Isn't it nice?</p>
 
-    <p>Here are some things I'm going to learn about coding:</p>
+    <p>Here are some things <strong>I'm going to learn</strong> about coding:</p>
     <ul>
       <li>HTML</li>
       <li>CSS</li>
