add list of favourite websites including links

--- a/favourite-things.html
+++ b/favourite-things.html
@@ -25,6 +25,14 @@
       <li>Mint and chocolate chip</li>
     </ol>
 
+    <h3>My favourite websites</h3>
+    <p>Here are links to three of my favourite websites</p>
+    <ul>
+      <li><a href="https://uk.pinterest.com/softwoodstudio/">Pinterest</a></li>
+      <li><a href="https://dribbble.com/">Dribble</a></li>
+      <li><a href="http://briefbox.me/">Briefbox</li>
+    </ul>
+
     <p>Thanks for reading about me!</p>
   <body/>
 </html>
