add font styling and color styling to css page, link stylesheet to html pages

--- a/favourite-things.html
+++ b/favourite-things.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>amanda's favourtie things</title>
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <title>amanda's Favourtie Things</title>
   </head>
   <body>
     <h1>My favourite things</h1>
